src/test/resources/semantic/custom/reject/whileStatementVoidType.ul
void main() {
}

void foo() {
    while (bar()) {
    }
}

void bar() {
}